modules/vpc/1-vpc.tf

/*
    Virtual Private Cloud 
*/
resource "aws_vpc" "this" {
    cidr_block = var.vpc_cidr_block

    enable_dns_support = true 
    enable_dns_hostnames = true

    tags = { 
        "Name" = "${var.env}-main"
    }
}
