modules/vpc/2-gateway.tf

/*
    Gateway 
*/
resource "aws_internet_gateway" "this" {
    vpc_id = aws_vpc.this.id

    tags =  { 
        Name = "${var.env}-gateway"
    }
}
